--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,31 +7,34 @@
   --b100: rgb(215, 229, 251);
   --b100-93: rgba(215, 229, 251, 0.93);
   --w200: rgb(247, 247, 247);
-}
+  --w400-0: rgba(53, 124, 237, 0); }
 
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 body {
-  background-color: var(--w200);
+  background: var(--w200);
   font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
-  /* padding: 20px; */
+  /* padding: $padding; */
   margin: 0;
   /* display: flex; */
   flex-direction: row;
   flex-wrap: nowrap;
   min-height: 100vh;
   overflow-x: hidden;
-}
+  overflow-y: hidden; }
 
-.left-side {
+/*
+    Left Component
+*/
+#left {
   position: fixed;
   width: 100%;
+  left: 0;
   flex-shrink: 0;
   display: flex;
   z-index: 2;
@@ -41,308 +44,176 @@ body {
   background: radial-gradient(var(--b100), var(--b500) 200%);
   align-items: center;
   padding: 20px;
-  transition: width 0.5s ease-in-out;
-}
-
-.key-instructions {
-  font-weight: 400;
-  color: var(--b500);
-  font-size: 0.8em;
-}
+  transition: width 0.5s ease-in-out, left 0.5s ease-in-out; }
 
 header {
   width: 100%;
   height: 100px;
-  flex-shrink: 0;
-}
-header h1 {
-  color: var(--b100);
-  font-size: 1.1em;
-}
-
-.generated-password-wrapper {
-  position: fixed;
-  width: 100vw;
-  min-height: 100vh;
-  /* background-color: var(--b100-93); */
-  top: 0;
-  left: 0;
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 60px 30px;
-  display: none;
-  pointer-events: none;
-  z-index: 3;
-}
-.generated-password {
-    position: relative;
-    width: 50%;
-    min-width: 250px;
-    background-color: var(--b400);
-    border-radius: 6px;
-    padding: 20px;
-    color: var(--w200);
-    font-size: 3em;
-    box-shadow: 2px 2px 30px 4px rgba(27, 62, 119, 0.36);
-    cursor: pointer;
-    pointer-events: visible;
-}
-
-.generated-password:after {
-    content: ' ';
-    position: absolute;
-    width: 80px;
-    height: 100%;
-    top: 0;
-    right: 0;
-    background: linear-gradient(to right, transparent, var(--b400) 75%);
-    border-radius: 0 6px 6px 0;
-    pointer-events: none;
-}
-
-.generated-password-inner {
-  overflow: hidden;
-}
-
-#password-field {
-  font-family: 'Courier New', Courier, monospace;
-  white-space: nowrap;
-}
-
-#password-field::selection {
-  background: var(--b500);
-}
-
-.btn-close {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: -10px;
-  right: -10px;
-  width: 20px;
-  height: 20px;
-  background-color: var(--b500);
-  z-index: 2;
-  border-radius: 10px;
-}
-
-.btn-close span {
-  width: 10px;
-  height: 2px;
-  background-color: var(--b100);
-  border-radius: 2px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform-origin: center;
-  cursor: pointer;
-}
-
-.btn-close span:nth-child(1) {
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.btn-close span:nth-child(2) {
-  transform: translate(-50%, -50%) rotate(-45deg);
-}
-
-.generated-password .copy {
-    position: absolute;
-    font-size: 0.8rem;
-    bottom: -0.8em;
-    background-color: var(--b500);
+  flex-shrink: 0; }
+  header h1 {
     color: var(--b100);
-    padding: 2px 5px 5px 5px;
-    border-radius: 6px;
-    opacity: 0;
-    transition: opacity 0.2s ease-in-out;
-}
-
-.generated-password .copy.show {
-  opacity: 1;
-}
-
-ul.shortcuts {
-  position: relative;
-  list-style: none;
-  margin-top: 100px;
-  width: 250px;
-  padding: 30px 20px 20px 20px;
-  background: var(--w200);
-  border-radius: 6px;
-  box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
-  display: none;
-}
-
-ul.shortcuts:before {
-  content: "shortcuts";
-  position: absolute;
-  top: -0.7em;
-  left: 0.8em;
-  background: var(--b400);
-  color: var(--w200);
-  padding: 2px 10px 3px 10px;
-  border-radius: 6px;
-}
-
-li.shortcut {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  font-size: 0.8em;
-  color: var(--b500);
-}
-
-li.shortcut + li.shortcut {
-  margin-top: 10px;
-}
-
-.keyboard-btn {
-  position: relative;
-  background: var(--b500);
-  color: var(--b100);
-  padding: 5px 10px 8px 10px;
-  display: inline-block;
-  border-radius: 6px;
-  min-width: 2.5em;
-  text-align: center;
-}
+    font-size: 1.1em; }
 
 aside {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  width: 50%;
-}
+  width: 50%; }
+  aside img {
+    cursor: pointer; }
+  aside p {
+    font-weight: 400;
+    color: var(--b500);
+    font-size: 0.8em; }
 
-#key-symbol {
-  cursor: pointer;
-}
-
-main {
-  width: 60%;
-  padding: 50px 20px 100px 20px;
+footer {
+  width: 100%;
+  flex-shrink: 0;
+  position: relative;
   display: flex;
-  justify-content: center;
+  align-items: baseline;
+  justify-content: space-between; }
+  footer p {
+    font-size: 0.7em;
+    color: var(--w200); }
+
+.icon {
+  opacity: 0.7;
+  transition: 0.3s ease-in-out; }
+  .icon:hover {
+    opacity: 1;
+    cursor: pointer; }
+
+/*
+    Form Component
+*/
+form {
+  width: 320px;
+  padding: 50px 20px 200px 20px;
+  display: flex;
   /* align-items: center; */
   min-height: 100vh;
   position: relative;
-  opacity: 0;
-  display: none;
-  transition: 0.5s ease-in-out;
+  flex-direction: column;
+  justify-content: center;
   position: absolute;
-  right: 0;
-}
+  right: 0; }
+  form button {
+    padding: 10px 20px;
+    margin-top: 30px;
+    background: var(--b600);
+    width: 100%;
+    max-width: 320px;
+    flex-shrink: 0;
+    height: 5em;
+    color: var(--b100);
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600; }
 
 fieldset {
-  border: none;
-}
+  border: none; }
 
 .panel {
-    display: block;
-    padding-bottom: 20px;
-}
+  display: block;
+  padding-bottom: 20px;
+  width: 100%; }
 
-.panel-title {
-  color: var(--b500);
-  font-weight: 600;
-  padding: 5px 10px;
-}
+.options {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
 
 .badge-left {
-    display: inline-block;
-    background: var(--b500);
-    color: var(--b100);
-    padding: 2px 10px 5px 10px;
-    border-radius: 6px 0 0 6px;
-}
+  flex-grow: 2;
+  background: var(--b500);
+  color: var(--b100);
+  padding: 2px 10px 5px 10px;
+  border-radius: 6px 0 0 6px; }
 
 .badge-right {
-    display: inline-block;
-    padding: 2px 10px 5px 10px;
-    background: var(--b200);
-    border-radius: 0 6px 6px 0;
-}
-
-.badge-right input {
+  padding: 2px 10px 5px 10px;
+  background: var(--b200);
+  border-radius: 0 6px 6px 0; }
+  .badge-right input {
     border: none;
     background: none;
     width: 2.5em;
     text-align: right;
     color: var(--b500);
-    font-weight: 600;
-}
+    font-weight: 600; }
+    .badge-right input:focus {
+      outline: none; }
 
-.badge-right input:focus {
-    outline: none;
-}
-
-.options {
-  display: flex;
-  flex-direction: row;
-}
-
-.invisible {
-  display: none;
-}
-
-.pad {
+.pad-button {
   position: relative;
-  width: 150px;
+  width: calc(50% - 10px);
   height: 150px;
   display: flex;
   flex-direction: column;
-  /* background-color: var(--b200); */
+  /* background: var(--b200); */
   border-radius: 6px;
   /* padding: 10px; */
   margin: 5px;
   cursor: pointer;
   /* overflow: hidden; */
   transform-origin: center;
-  transition: 0.5s ease-in-out;
-}
+  transition: 0.5s ease-in-out; }
 
-.pad:hover .border {
-}
-
-.pad:hover input:checked ~ .border {
-}
+.invisible {
+  display: none; }
 
 .background-fill {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    flex-grow: 2;
-    border-radius: 6px 6px 0 0;
-    background-color: var(--b200);
-    padding: 10px;
-    color: var(--b500);
-}
-
-.round-corners {
-  border-radius: 6px 6px 6px 6px;
-}
-
-.pad input:checked ~ .background-fill {
-    background-color: var(--b500);
-}
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  flex-grow: 2;
+  border-radius: 6px 6px 0 0;
+  background: var(--b200);
+  padding: 10px;
+  color: var(--b500); }
+  .background-fill.round-corners {
+    border-radius: 6px 6px 6px 6px; }
 
 .sub-label {
-  
   font-size: 1em;
   /* align-self: flex-end; */
   position: relative;
-  max-width: 50px;
-}
+  max-width: 50px; }
 
-.pad input:checked ~ .background-fill {
-    color: var(--b100);
-}
+.cross {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--b500);
+  transition: transform 0.3s ease-in-out;
+  transform: rotate(45deg); }
+  .cross span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 2px;
+    background: var(--b200);
+    border-radius: 2px;
+    transform-origin: center;
+    transform: translate(-50%, -50%) rotate(45deg); }
+    .cross span:nth-child(2) {
+      transform: translate(-50%, -50%) rotate(-45deg); }
+
+input:checked ~ .background-fill {
+  background: var(--b500);
+  color: var(--b100); }
+  input:checked ~ .background-fill .cross {
+    background: var(--b200);
+    transform: rotate(0); }
+    input:checked ~ .background-fill .cross span {
+      background: var(--b500); }
 
 .character-class-range {
   position: relative;
@@ -353,22 +224,17 @@ fieldset {
   display: flex;
   padding: 5px;
   border-radius: 0 0 6px 6px;
-  overflow: hidden;
-}
-
-.character-class-range label {
-  position: relative;
-  width: 50%;
-  overflow: hidden;
-}
-
-.character-class-range span {
-  display: block;
-  width: 100%;
-  font-size: 0.8em;
-  text-align: center;
-  color: var(--b300);
-}
+  overflow: hidden; }
+  .character-class-range label {
+    position: relative;
+    width: 50%;
+    overflow: hidden; }
+    .character-class-range label span {
+      display: block;
+      width: 100%;
+      font-size: 0.8em;
+      text-align: center;
+      color: var(--b500); }
 
 .character-class-min,
 .character-class-max {
@@ -377,140 +243,268 @@ fieldset {
   border: none;
   background: none;
   font-size: 1.5em;
-  color: var(--b400);
-}
+  color: var(--b400); }
+  .character-class-min:focus,
+  .character-class-max:focus {
+    outline: none;
+    background: var(--b500);
+    color: var(--b200); }
 
-.character-class-min:focus,
-.character-class-max:focus {
-  outline: none;
-  background-color: var(--b500);
-  color: var(--b200);
-}
-
-
-button#generate-password {
-  background-color: var(--b600);
-  color: var(--b100);
+legend {
+  color: var(--b500);
   font-weight: 600;
-  border: none;
-  padding: 10px 20px;
+  padding: 5px 10px; }
+
+/*
+    Generated Password Component
+*/
+.generated-password-wrapper {
+  position: fixed;
+  width: 100vw;
+  min-height: 100vh;
+  /* background: var(--b100-93); */
+  top: 0;
+  left: 0;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 60px 20px;
+  display: none;
+  pointer-events: none;
+  z-index: 3; }
+
+.generated-password-self {
+  position: relative;
+  width: 50%;
+  min-width: 250px;
+  background: var(--b400);
   border-radius: 6px;
+  padding: 20px;
+  color: var(--w200);
+  font-size: 3em;
+  box-shadow: 2px 2px 30px 4px rgba(27, 62, 119, 0.36);
   cursor: pointer;
-}
+  pointer-events: visible; }
+
+.generated-password-inner {
+  overflow: hidden; }
+
+#password-field {
+  font-family: 'Courier New', Courier, monospace;
+  white-space: nowrap; }
+  #password-field::selection {
+    background: var(--b500); }
+
+.btn-close {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -10px;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  background: var(--b500);
+  z-index: 2;
+  border-radius: 50%; }
+  .btn-close span {
+    width: 10px;
+    height: 2px;
+    background: var(--b100);
+    border-radius: 2px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform-origin: center;
+    transform: translate(-50%, -50%) rotate(45deg);
+    cursor: pointer; }
+    .btn-close span:nth-child(2) {
+      transform: translate(-50%, -50%) rotate(-45deg); }
+
+.copy {
+  position: absolute;
+  font-size: 0.8rem;
+  bottom: -0.8em;
+  background: var(--b500);
+  color: var(--b100);
+  padding: 2px 5px 5px 5px;
+  border-radius: 6px;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out; }
+  .copy.show {
+    opacity: 1; }
+
+/*
+    Shortcuts Component
+*/
+.shortcuts {
+  position: relative;
+  list-style: none;
+  margin-top: 100px;
+  width: 250px;
+  padding: 30px 20px 20px 20px;
+  background: var(--w200);
+  border-radius: 6px;
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.1);
+  display: none; }
+  .shortcuts:before {
+    content: "shortcuts";
+    position: absolute;
+    top: -0.7em;
+    left: 0.8em;
+    background: var(--b400);
+    color: var(--w200);
+    padding: 2px 10px 3px 10px;
+    border-radius: 6px; }
+  .shortcuts li {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    font-size: 0.8em;
+    color: var(--b500); }
+    .shortcuts li .keyboard-btn {
+      position: relative;
+      background: var(--b500);
+      color: var(--b100);
+      padding: 5px 10px 8px 10px;
+      display: inline-block;
+      border-radius: 6px;
+      min-width: 2.5em;
+      text-align: center; }
+  .shortcuts li + li {
+    margin-top: 10px; }
 
 input[type=number]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
+  -webkit-appearance: none; }
 
 input[type="range"] {
   -webkit-appearance: none;
   margin: 18px 0 40px 0;
-  width: 100%;
-}
-input[type="range"]:focus {
-  outline: none;
-}
-input[type="range"]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 4px;
-  cursor: pointer;
-  animation: 0.2s;
-  background: var(--b300);
-  border-radius: 4px;
-}
-input[type="range"]::-webkit-slider-thumb {
-  border: 4px solid var(--b500);
-  /* box-shadow: 0 0 0 4px var(--w200); */
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: var(--b100);
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -6px;
-}
-input[type="range"]:focus::-webkit-slider-runnable-track {
-  background: var(--b300);
-}
-
-footer {
-  width: 100%;
-  flex-shrink: 0;
-  position: relative;
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
-
-.icon {
-  opacity: 0.7;
-  transition: 0.3s ease-in-out;
-}
-
-.icon:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.copyright {
-  font-size: 0.7em;
-  color: var(--w200);
-}
-
-
-/* input[type="range"]::-moz-range-track {
+  width: 100%; }
+  input[type="range"]:focus {
+    outline: none; }
+  input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
     height: 4px;
     cursor: pointer;
     animation: 0.2s;
     background: var(--b300);
-    border-radius: 4px;
-}
-input[type="range"]::-moz-range-thumb {
+    border-radius: 4px; }
+  input[type="range"]::-webkit-slider-thumb {
     border: 4px solid var(--b500);
-    box-shadow: 0 0 0 4px var(--w200);
+    /* box-shadow: 0 0 0 4px var(--w200); */
     height: 16px;
     width: 16px;
     border-radius: 50%;
     background: var(--b100);
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -6px;
-}
-input[type="range"]::-ms-track {
-  width: 100%;
-  height: 4px;
+    margin-top: -6px; }
+  input[type="range"]:focus::-webkit-slider-runnable-track {
+    background: var(--b300); }
+
+.back-button {
+  position: fixed;
+  bottom: 20px;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+  display: none;
+  background: var(--b500);
+  border: solid 2px var(--w200);
+  box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.1), -2px -2px 20px 0 rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
   cursor: pointer;
-  animation: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  border-width: 16px 0;
-  color: transparent;
-}
-input[type="range"]::-ms-fill-lower {
-  background: #2a6495;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-input[type="range"]::-ms-fill-upper {
-  background: #3071a9;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-input[type="range"]::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-}
-input[type="range"]:focus::-ms-fill-lower {
-  background: #3071a9;
-}
-input[type="range"]:focus::-ms-fill-upper {
-  background: #367ebd;
-} */
+  z-index: 1; }
+  .back-button span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 2px;
+    background: var(--b200);
+    border-radius: 2px;
+    transform-origin: 1px 1px;
+    transform: translate(-4px, -1px) rotate(-45deg); }
+    .back-button span:nth-child(2) {
+      transform: translate(-4px, -1px) rotate(45deg); }
+
+.settings-open {
+  overflow-y: scroll; }
+  .settings-open #left {
+    width: calc(100% - 320px); }
+
+@media (max-width: 763px) {
+  form {
+    width: 100%;
+    align-items: center; }
+    form legend {
+      text-align: center; }
+    form button {
+      max-width: 100%; }
+  .generated-password {
+    width: 100%; }
+  .settings-open #left {
+    width: 100%;
+    left: -100%; }
+  .settings-open .back-button {
+    display: block; } }
+
+/* input[type="range"]::-moz-range-track {
+      width: 100%;
+      height: 4px;
+      cursor: pointer;
+      animation: 0.2s;
+      background: var(--b300);
+      border-radius: 4px;
+  }
+  input[type="range"]::-moz-range-thumb {
+      border: 4px solid var(--b500);
+      box-shadow: 0 0 0 4px var(--w200);
+      height: 16px;
+      width: 16px;
+      border-radius: 50%;
+      background: var(--b100);
+      cursor: pointer;
+      -webkit-appearance: none;
+      margin-top: -6px;
+  }
+  input[type="range"]::-ms-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    animation: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+  }
+  input[type="range"]::-ms-fill-lower {
+    background: #2a6495;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type="range"]::-ms-fill-upper {
+    background: #3071a9;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type="range"]::-ms-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+  }
+  input[type="range"]:focus::-ms-fill-lower {
+    background: #3071a9;
+  }
+  input[type="range"]:focus::-ms-fill-upper {
+    background: #367ebd;
+  } */
