--- a/src/css/style.css
+++ b/src/css/style.css
@@ -278,12 +278,12 @@ legend {
 .generated-password-self {
   position: relative;
   width: 50%;
-  min-width: 250px;
   background: var(--b400);
   border-radius: 6px;
   padding: 20px;
   color: var(--w200);
   font-size: 3em;
+  text-align: center;
   box-shadow: 2px 2px 30px 4px rgba(27, 62, 119, 0.36);
   cursor: pointer;
   pointer-events: visible; }
@@ -293,7 +293,8 @@ legend {
 
 #password-field {
   font-family: 'Courier New', Courier, monospace;
-  white-space: nowrap; }
+  white-space: nowrap;
+  font-size: 40%; }
   #password-field::selection {
     background: var(--b500); }
 
