--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -89,6 +89,7 @@ footer {
     position: relative;
     display: flex;
     align-items: baseline;
+    text-align: center;
     justify-content: space-between;
 
     p {
