disable double tap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,8 @@
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
   margin: 0;
   padding: 0; }
 
