--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -25,7 +25,7 @@ $border-radius-unit: 6px;
   
 body {
     background: var(--w200);
-    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /* padding: $padding; */
     margin: 0;
     /* display: flex; */
