--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,10 +51,13 @@ body {
 header {
   width: 100%;
   height: 100px;
-  flex-shrink: 0; }
+  flex-shrink: 0;
+  color: var(--b100);
+  text-align: center; }
   header h1 {
-    color: var(--b100);
-    font-size: 1.1em; }
+    font-size: 3em; }
+  header .subtitle {
+    padding-top: 20px; }
 
 aside {
   display: flex;
