--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -61,10 +61,14 @@ header {
     width: 100%;
     height: 100px;
     flex-shrink: 0;
+    color: var(--b100);
+    text-align: center;
 
     h1 {
-        color: var(--b100);
-        font-size: 1.1em;
+        font-size: 3em;
+    }
+    .subtitle {
+        padding-top: $padding;
     }
 }
 
